@@ -70,11 +70,9 @@ identify opportunities for improvement.
 </p>
 <p>
 <a href="mailto:bryce@albatross.co.nz">Bryce McKinlay</a> has put
-together a list of some <a
-href="http://waitaki.otago.ac.nz/~bryce/gcj/">benchmarks that run on
-GCJ</a>.  IBM has also recently released a set of "micro benchmarks"
-called jMocha.  Building
-some infrastructure around these would be incredibly useful.
+together a list of some benchmarks that run on GCJ.  IBM has also
+recently released a set of "micro benchmarks" called jMocha.
+Building some infrastructure around these would be incredibly useful.
 </p>
 
 <br />
