@@ -1,3 +1,8 @@
+2008-03-22  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* projects.html: Remove broken link to benchmarks compiled by
+	Bryce McKinlay.
+	
 2007-10-29  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* papers/gcc-java.html: Make Per Bothner's old address plain text
